# napari-flim-phasor-plotter

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  test.ipynb  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_flim_phasor_calculator/: __init__.py  _plotting.py  _reader.py  _reader_v1.py  _synthetic.py  _widget.py  _widget_using_dask.py  filters.py  find_string.ipynb  napari.yaml  phasor.py  testing  testing.py  try_reader.py
src/napari_flim_phasor_calculator/_io/: convert_to_zarr.py  readPTU_FLIM.py
src/napari_flim_phasor_calculator/_tests/: dask_timestack_chunks_as_zlices_rechunking.ipynb  dask_timestack_chunks_as_zlices_rechunking_ptu.ipynb  dask_timestack_chunks_as_zstacks.ipynb  dask_timestack_chunks_as_zstacks_ptu.ipynb  dask_timestack_chunks_as_zstacks_ptu_notime.ipynb  dask_zstack_chunks_as_zslices.ipynb  ptu2tif.py  test_dask_zstack_lazy_loading.py  test_reader.py  test_sample_data.py  test_widget.py  tif_to_zarr_working.ipynb
src/napari_flim_phasor_plotter/: __init__.py  _plotting.py  _reader.py  _sample_data.py  _synthetic.py  _widget.py  filters.py  napari.yaml  phasor.py
src/napari_flim_phasor_plotter/_io/: __init__.py  convert_to_ome_tif.py  convert_to_ometif.ipynb  convert_to_zarr.py  readPTU_FLIM.py  utilities.py
src/napari_flim_phasor_plotter/_tests/: test_convert_to_ome_tif.py  test_convert_to_zarr.py  test_filters.py  test_reader.py  test_sample_data.py  test_widget.py
src/napari_flim_phasor_plotter/data/: lifetime_cat_labels.tif  lifetime_cat_metadata.yml
src/napari_flim_phasor_plotter/data/hazelnut_FLIM_z_stack/: ptu_stack_FLIM_z1.ptu  ptu_stack_FLIM_z10.ptu  ptu_stack_FLIM_z11.ptu  ptu_stack_FLIM_z2.ptu
src/napari_flim_phasor_plotter/notebooks/: save_stack_as_minimal_ome_tif.ipynb
