[metadata]
name = napari-flim-phasor-plotter
version = 0.1.0
description = A plugin that performs phasor plot from TCSPC FLIM data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zoccoler/napari-flim-phasor-plotter
author = Marcelo L. Zoccoler, Cornelia Wetzker
author_email = marzoccoler@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/zoccoler/napari-flim-phasor-plotter/issues
    Documentation = https://github.com/zoccoler/napari-flim-phasor-plotter#README.md
    Source Code = https://github.com/zoccoler/napari-flim-phasor-plotter
    User Support = https://github.com/zoccoler/napari-flim-phasor-plotter/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    napari>=0.4.19
    napari-clusters-plotter>=0.8.0
    ptufile
    sdtfile
    natsort
    rocket-fft
    dask
    zarr
    napari-segment-blobs-and-things-with-membranes
    napari-skimage-regionprops
    scikit-image>=0.20.0

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-flim-phasor-plotter = napari_flim_phasor_plotter:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
